SC - bug fixing layer tree with vms sources, starting options (for visibility and styles) in all layers
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/unionvms-web@13394 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/app/directive/spatial/layerTree/layerTree.less
+++ b/app/directive/spatial/layerTree/layerTree.less
@@ -23,17 +23,17 @@ span.fancytree-clickable {
   color: @profileColor_darkgray;
   font-size: 13px;
   line-height: 25px;
-  &.fa-info-circle,
-  &.fa-tags,
+  &.fa-tag,
+  &.fancytree-vector-options,
   &.fancytree-context-menu-btn {
   	position: absolute;
   }
-  &.fa-info-circle {
-  	right: 25px;
-  }
-  &.fa-tags,
+  &.fancytree-vector-options,
   &.fancytree-context-menu-btn {
   	right: 5px;
+  }
+  &.fa-tag {
+    right: 20px;
   }
   &.fancytree-context-menu-btn.context-menu-active {
     color: @primaryColor !important;
